<resources>
    <string name="app_name">QuizNerd</string>
    <string name="sign_in_failed">Error. Could not sign in. Please try again.</string>
    <string name="action_settings">Settings</string>
    <string name="score_template">%1$.0f %% win ratio</string>
    <string name="your_turn">Your turn</string>
    <string name="error">Sorry, an error has occured ;-(</string>
    <string name="question_template">Question %1$s</string>
    <string name="round_template">Round %1$s</string>
    <string name="round_with_score_template">Round %1$s (%2$s : %3$s)</string>
    <string name="score_short_template">%1$s : %2$s</string>
    <string name="round_score_template">%1$s vs. %2$s</string>
    <string name="score_no_round_template">%1$s : %2$s</string>
    <string name="loading">Loading ...</string>
    <string name="play">Play!</string>
    <string name="progress_your_turn">It\'s your turn!</string>
    <string name="progress_waiting_for_opponent">Waiting for opponent ...</string>
    <string name="result_time_up">Your time was up ...</string>
    <string name="result_correct">Correct answer, congratulations!</string>
    <string name="result_wrong">Sorry, that was the wrong answer ...</string>
    <string name="choose_opponent">Opponent</string>
    <string name="choose_category">Category</string>
    <string name="previous_opponents">Previous opponents</string>
    <string name="action_start">Start</string>
    <string name="new_match">New Match</string>
    <string name="find_opponent">Find opponent</string>
    <string name="find_by_nickname">Find player</string>
    <string name="user_not_found">No user found, sorry.</string>
    <string name="error_create_match">Could not create new match, sorry.</string>
    <string name="dialog_title_won">You won!</string>
    <string name="dialog_title_lost">You lost</string>
    <string name="dialog_message_won">Congratulations! You won this round.</string>
    <string name="dialog_message_lost">Unfortunately, you lost the match. Maybe better luck next time?</string>
    <string name="dialog_button_won">Wohoo!</string>
    <string name="dialog_button_lost">Sure</string>
    <string name="dialog_title_draw">Draw</string>
    <string name="dialog_message_draw">That was close! It\'s a draw.</string>
    <string name="dialog_button_draw">OK</string>
    <string name="active_matches">Active Matches</string>
    <string name="previous_matches">Past Matches</string>
    <string name="your_answer">Your answer:</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="choose_nickname">Choose a nickname</string>
    <string name="poked_template">%1$s has been poked.</string>
    <string name="not_poked_template">You already poked %1$s.</string>
    <string name="nickname">Your nickname</string>
    <string name="gender">Your Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="action_create">Create</string>
    <string name="create_profile">Create your nerd</string>
    <string name="error_create_user">Could not create new user, sorry.</string>
    <string name="no_whitespaces">No whitespaces allowed</string>
    <string name="nickname_max_length_template">Nickname must be at least %1$s characters</string>
    <string name="action_logout">Logout</string>
    <string name="no_matches">You don\'t have any matches, yet. Go start one!</string>
    <string name="no_active_matches">You don\'t have any active quizzes. Go start one!</string>
    <string name="slogan">... created for nerds who like quizzes.</string>
    <string name="featuring">Currently featuring</string>
    <string name="beta">Beta</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="license_title">Software Licenses</string>
    <string name="action_licenses">Licenses</string>
    <string name="about">About &amp; Privacy</string>
    <string name="action_bug">Report bug</string>
    <string name="mail">mail@ferdinand-muetsch.de</string>
    <string name="bug_subject">QuizNerd Bug Report</string>
    <string name="bug_body">Hello Ferdinand!\n\nI found a bug in QuizNerd.\n\nDESCRIBE YOUR BUG HERE\n\n- A happy nerd</string>
    <string name="send_mail">Send mail ...</string>
    <string name="desc_avatar">User Avatar</string>
    <string name="desc_female">Female Nerd Avatar</string>
    <string name="desc_male">Male Nerd Avatar</string>
    <string name="desc_avatar_own">Your own user avatar</string>
    <string name="desc_avatar_opp">Your opponents user avatar</string>
    <string name="desc_wrong">A red forbidden sign</string>
    <string name="desc_category">The category\'s icon</string>
    <string name="desc_logo">The logo</string>
    <string name="desc_android">Android logo</string>
    <string name="desc_java">Java logo</string>
    <string name="desc_python">Python logo</string>
    <string name="desc_csharp">C Sharp logo</string>
    <string name="desc_cpp">C++ logo</string>
    <string name="desc_html">HTML logo</string>
    <string name="desc_swift">Swift logo</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_internet">Sorry, it seems like you do not have internet connection ...</string>
    <string name="refresh">Refresh</string>
    <string name="avatar_note">Note: Your avatar is generated based on your nickname.</string>
    <string name="opponent_answer">Opponent\'s answer:</string>
    <string name="delete_match">Delete match</string>
    <string name="delete_match_confirm">You are about to delete this match. This cannot be reversed. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="error_delete_match">Sorry, an error has occurred while deleting the match.</string>
    <string name="quit">Quit</string>
    <string name="quit_app">Exit</string>
    <string name="quit_app_confirm">Do you want to quit QuizNerd?</string>
    <string name="poke_opponent">Poke</string>
    <string name="random_opponent">Random Opponent</string>

</resources>
