<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_licenses"
        android:title="@string/action_licenses"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_bug"
        android:title="@string/action_bug"
        app:showAsAction="never" />
    <!--
    <item
        android:id="@+id/debug_logout"
        android:title="Debug Logout"
        app:showAsAction="never" />
    -->
    <item
        android:id="@+id/menu_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>