<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/desc_logo"
        app:srcCompat="@drawable/ic_appicon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/AppTheme.Text.Background.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name" />

        <TextView
            style="@style/AppTheme.Text.Dark.SectionHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:text="@string/beta"
            android:textAllCaps="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/slogan" />

    <TextView
        style="@style/AppTheme.Text.Dark.SectionHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/featuring" />

    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_android"
            app:srcCompat="@drawable/ic_cat_android" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_java"
            app:srcCompat="@drawable/ic_cat_java" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_python"
            app:srcCompat="@drawable/ic_cat_python" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_csharp"
            app:srcCompat="@drawable/ic_cat_csharp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_cpp"
            app:srcCompat="@drawable/ic_cat_cpp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/ic_cat_js" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_html"
            app:srcCompat="@drawable/ic_cat_html" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/ic_cat_php" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:contentDescription="@string/desc_swift"
            app:srcCompat="@drawable/ic_cat_swift" />

    </android.support.v7.widget.GridLayout>

</LinearLayout>