<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PlayerSetupActivity">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="@dimen/app_bar_elevation"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/AppTheme.ToolbarStyle" />

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/setup_loading_spinner"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="32dp"
                android:elevation="6dp"
                android:visibility="gone" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/setup_avatar_iv"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/desc_avatar"
                        android:src="@drawable/ic_unknown_user"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_width="3dp"
                        app:civ_circle_background_color="@color/colorBackground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/setup_nickname_input_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        app:hintAnimationEnabled="true"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/setup_avatar_iv">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/setup_nickname_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789_qwertzuiopasdfghjklyxcvbnm"
                            android:hint="@string/choose_nickname"
                            android:maxLength="32"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/setup_gender_label_tv"
                        style="@style/AppTheme.Text.Dark.SectionHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/gender"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/setup_nickname_input_container" />

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/setup_gender_label_tv">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ToggleButton
                                android:id="@+id/setup_female_button"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:background="@drawable/select_female_toggle"
                                android:contentDescription="@string/desc_female"
                                android:textOff=""
                                android:textOn="" />

                            <TextView
                                android:id="@+id/setup_female_label"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/female" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ToggleButton
                                android:id="@+id/setup_male_button"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:background="@drawable/select_male_toggle"
                                android:contentDescription="@string/desc_male"
                                android:textOff=""
                                android:textOn="" />

                            <TextView
                                android:id="@+id/setup_male_label"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/male" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/avatar_note"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

                </android.support.constraint.ConstraintLayout>


            </android.support.v7.widget.CardView>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>