<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="@dimen/app_bar_elevation"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/AppTheme.ToolbarStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="16dp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/details_avatar1_iv"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:contentDescription="@string/desc_avatar_own"
                    android:src="@drawable/ic_unknown_user"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="3dp"
                    app:civ_circle_background_color="@color/colorBackground" />

                <TextView
                    android:id="@+id/details_score_tv"
                    style="@style/AppTheme.Text.Light.TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="TextView" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/details_avatar2_iv"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:contentDescription="@string/desc_avatar_opp"
                    android:src="@drawable/ic_unknown_user"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="3dp"
                    app:civ_circle_background_color="@color/colorBackground" />

            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <Button
            android:id="@+id/details_play_button"
            style="@style/Base.Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/play"
            android:textColor="@android:color/white" />

        <ListView
            android:id="@+id/details_round_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:divider="@android:color/transparent" />

    </LinearLayout>

</FrameLayout>